--- a/slides/index.html
+++ b/slides/index.html
@@ -4,16 +4,101 @@
 
 <section>
 	<h4>Qu'est ce qu'un système informatique ?</h4>
+  <ul fc>
+    <li>Son but est d'automatiser le traitement, le stockage, la transmission
+      et la présentation de l'information.</li>
+    <li>Il est constitué d'une partie matérielle (hardware) et une partie
+      logicielle (software).</li>
+    <li>Exemples: PCs, smartphones, tablettes, TVs, véhicules, automates programmables
+      industriels, ...</li>
+  </ul>
 </section>
 
 <section>
 	<h4>Qu'est ce qu'un réseau informatique ?</h4>
+  <ul fc>
+    <li>Un ensemble d'ordinateurs connectés entre eux.</li>
+    <li>Son but, entre autres, est de faciliter le partage des ressources.</li>
+    <li>Chaque machine dans un réseau est identifiée par une adresse IP.</li>
+    <li>La forme d'une adresse IP : <code>x.x.x.x</code> où x est un nombre
+      entre 0 et 255.</li>
+    <li>Exemples d'adresses : <code>127.0.0.1</code>, <code>8.8.8.8</code>,
+      <code>192.168.1.1</code>, <code>172.217.23.228</code>, ...</li>
+  </ul>
 </section>
 
 <section>
 	<h4>Qu'est ce qu'Internet ?</h4>
+  <ul fc>
+    <li>C'est un réseau mondial (le réseau des réseaux).</li>
+    <li>A voir : <a href="http://www.warriorsofthe.net/movie.html">Warriors of the net.</a></li>
+  </ul>
 </section>
 
 <section>
-	<h4>Qu'est ce que le Web ?</h4>
+  <section>
+  	<h4>Qu'est ce que le Web ?</h4>
+    <ul fc>
+      <li>Abréviation de l'anglais World Wide Web (WWW), signifiant toile
+        d'araignée mondiale.</li>
+      <li>Inventé le 12 mars 1989 au CERN, Tim Berners-Lee et Robert Cailliau.</li>
+    </ul>
+  </section>
+  <section>
+    <h4>Les ressources</h4>
+    <ul fc>
+      <li>Le web est composé de ressources (pages, images, sons, vidéos, ...).</li>
+      <li>Les ressources sont liées entres elles par des liens hypertextes (hypermedias).</li>
+    </ul>
+  </section>
+  <section>
+    <h4>Les ressources</h4>
+    <img src="img/hypertexte.jpg" alt=""/>
+  </section>
+  <section>
+    <h4>Les ressources</h4>
+    <img src="img/hypermedia.jpg" alt=""/>
+  </section>
+  <section>
+    <h4>URL</h4>
+    <ul fc>
+      <li>URL pour Uniform Resource Locator.</li>
+      <li>Chaque ressource est identifiée par une URL ou adresse web.</li>
+      <li style="font-size:normal">Les URL ont diverses formes :<br/>
+        <code>http://fr.wikipedia.org/</code><br/>
+        <code>ftp://ftp.rfc-editor.org/in-notes/rfc2396.txt</code><br/>
+        <code>mailto:skikdaitechclub@gmail.com</code><br/>
+        <code>file:///C:/hello_wolrd.js</code>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <h4>HTTP</h4>
+    <ul fc>
+      <li>HTTP pour HyperText Transfer Protocol.</li>
+      <li>C'est le protocol qui permet le partage des ressources sur le web.</li>
+    </ul>
+  </section>
+  <section>
+    <h4>Serveur HTTP</h4>
+    <ul fc>
+      <li>Un serveur HTTP est le logiciel utilisé pour servir des ressources.</li>
+      <li>Exemple: Apache HTTP Server, NGINX, Apache Tomcat, NodeJS, ...</li>
+    </ul>
+  </section>
+  <section>
+    <h4>Client HTTP</h4>
+    <ul fc>
+      <li>Un client HTTP est le logiciel utilisé pour accéder aux ressources.</li>
+      <li>Tout les navigateurs web sont des clients HTTP.</li>
+    </ul>
+  </section>
+  <section>
+    <h4>Fonctionnement du Client-Serveur</h4>
+    <img src="img/client-serveur.png" alt=""/>
+  </section>
+</section>
+
+<section>
+  <h3>FIN.</h3>
 </section>
